# manifest

./: .gitignore  LICENSE  README.md  USAGE.md  requirements.txt  setup.cfg
.github/workflows/: publish.yml  push.yml
manifest/: __main__.py
manifest/core/: build.py  dependencies.py  fetch.py  grab.py  install.py  log.py  patch.py  util.py
