[metadata]
name = manifest
version = 1.1.0
author = Synthels
author_email = synthels.me@gmail.com
description = Declarative package manager
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/synthels/manifest
project_urls =
    Bug Tracker = https://github.com/synthels/manifest/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    colored==2.2.4
    docopt==0.6.2
    PyYAML==6.0.2
